[package]
name = "rust_lib_buf_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0"
bitcoin-uri-ffi = { path = "../../../ffi/bitcoin-uri-ffi" }



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

